# DSEB65A-Group04-customer-churn-predictor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  demo.ps1  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  monitor.yml  retrain.yml  train.yml
config/: drift_config.yaml  model_config.yaml
core/: transformer.py
core/utils/: binning.py  converting.py  encoding.py  mapping.py
data/preprocessed/: train.parquet  train.parquet.dvc
data/raw/: new_dataset.csv.dvc  train.csv.dvc
k8s/: fastapi-deployment.yaml  fastapi-hpa.yaml  fastapi-service.yaml  grafana-configmap.yaml  grafana-deployment.yaml  grafana-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-pvc.yaml  prometheus-service.yaml  streamlit-deployment.yaml  streamlit-service.yaml  traffic.yaml
k8s/monitoring/: prometheus.yml
logs/: monitoring.json
models/: LATEST_VERSION.txt  baseline_stats.json  churn_model.pkl.dvc  metadata.json  model.pkl.dvc  preprocessing_pipeline.joblib
models/run_20260408_221624/: config.yaml
models/run_20260408_223045/: config.yaml
monitoring/: detect_drift.py  prometheus.yml
notebooks/: 01_EDA.ipynb  02_Preprocessing.ipynb  02_Preprocessing_FeaturEngineer.ipynb  03_Training.ipynb  EDA.ipynb  data_preprocessing.ipynb  training.ipynb
scripts/: merge_data.py  simulate_labels.py  traffic.py
streamlit_app/: Dockerfile  app.py
tests/: test_api.py  test_data_pipeline.py  test_drift_logic.py  test_model_quality.py
(+10 files in other folders)
