[project]
name = "dseb65a-group04-customer-churn-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc-s3>=3.3.0",
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pyyaml>=6.0.2",
    "requests>=2.33.1",
    "ruff>=0.15.9",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "requests>=2.33.1",
    "dvc[s3]>=3.67.1",
]
